fix: draw icons not visible on ios

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,3 +83,8 @@ button {
     opacity: 1;
   }
 }
+.draw-icon {
+  width: 100%;
+  height: 100%;
+  color: black;
+}
